--- a/spec/resources/export/upstart/app-alpha-1-custom.conf
+++ b/spec/resources/export/upstart/app-alpha-1-custom.conf
@@ -2,11 +2,11 @@ start on starting app-alpha
 stop on stopping app-alpha
 respawn
 
-env PORT=5001
+env PORT=5000
 
 setuid app
 
-reload signal HUP
+reload signal USR2
 
 kill signal TERM
 
